crates/strider/tests/snapshots/v3__x86_kernel__patterns__main.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x4010f0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "4" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "5" [label="const 0x3:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "6" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "7" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "1" -> "7" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "8" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "9" -> "7" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "9" [label="const 0x401100:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "10" -> "7" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "10" [label="const 0xdeadbeef:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v11" [label="Post Call\nEDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v11" [color="#888888", style=dashed];
  "v11" -> "7" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "v12" [label="Post Call\nECX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v12" [color="#888888", style=dashed];
  "v12" -> "7" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "13" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "7" -> "13" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "14" -> "13" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "15" -> "13" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "15" [label="const 0x401110:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "16" -> "13" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "16" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v17" [label="Post Call\nEDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "7" -> "v17" [color="#888888", style=dashed];
  "v17" -> "13" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "v18" [label="Post Call\nECX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "7" -> "v18" [color="#888888", style=dashed];
  "v18" -> "13" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "19" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "13" -> "19" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "20" -> "19" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "21" -> "19" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "21" [label="const 0x401120:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "22" -> "19" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "23" -> "19" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "23" [label="const 0x5:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v24" [label="Post Call\nECX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "13" -> "v24" [color="#888888", style=dashed];
  "v24" -> "19" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "25" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "19" -> "25" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "26" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "27" -> "25" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "27" [label="const 0x401150:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "28" -> "25" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0x5:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "29" -> "25" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "29" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v30" [label="Post Call\nECX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "19" -> "v30" [color="#888888", style=dashed];
  "v30" -> "25" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "31" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "25" -> "31" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "32" -> "31" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "33" -> "31" [color="#88cc88", label=EAX, fontcolor="#cccccc", fontsize=9];
  "v34" [label="Post Call\nEDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "25" -> "v34" [color="#888888", style=dashed];
  "v34" -> "31" [color="#88cc88", label=EDX, fontcolor="#cccccc", fontsize=9];
  "v35" [label="Post Call\nST0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "25" -> "v35" [color="#888888", style=dashed];
  "v35" -> "31" [color="#88cc88", label=ST0, fontcolor="#cccccc", fontsize=9];
  "v36" [label="Post Call\nXMM0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "25" -> "v36" [color="#888888", style=dashed];
  "v36" -> "31" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "33" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "37" -> "33" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v38" [label="Post Call\nEAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "25" -> "v38" [color="#888888", style=dashed];
  "v38" -> "33" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "37" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "25" -> "37" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "39" -> "37" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "39" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "40" -> "39" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "41" -> "39" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "41" [label="const 0xfffffff8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "40" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "32" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "25" -> "32" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "39" -> "32" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "33" -> "32" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "26" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "42" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "43" -> "26" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "44" -> "26" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "44" [label="const 0x4011d5:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "43" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "40" -> "43" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "45" -> "43" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "45" [label="const 0xfffffff0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "42" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "19" -> "42" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "46" -> "42" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "47" -> "42" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "47" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "48" -> "47" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v49" [label="Post Call\nEAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "19" -> "v49" [color="#888888", style=dashed];
  "v49" -> "47" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "48" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "19" -> "48" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "46" -> "48" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "46" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "40" -> "46" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "50" -> "46" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "50" [label="const 0xfffffff8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "22" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "40" -> "22" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "51" -> "22" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "51" [label="const 0xfffffffc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "20" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "52" -> "20" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "43" -> "20" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "53" -> "20" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "53" [label="const 0x4011c5:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "52" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "54" -> "52" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "22" -> "52" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "55" -> "52" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "55" [label="const 0x7:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "54" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "13" -> "54" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "46" -> "54" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "56" -> "54" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "56" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "57" -> "56" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v58" [label="Post Call\nEAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "13" -> "v58" [color="#888888", style=dashed];
  "v58" -> "56" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "57" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "13" -> "57" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "46" -> "57" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "14" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "59" -> "14" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "43" -> "14" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "60" -> "14" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "60" [label="const 0x4011ab:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "59" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "7" -> "59" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "46" -> "59" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "61" -> "59" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "61" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "62" -> "61" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v63" [label="Post Call\nEAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "7" -> "v63" [color="#888888", style=dashed];
  "v63" -> "61" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "62" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "62" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "46" -> "62" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "8" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "64" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "43" -> "8" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "65" -> "8" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "65" [label="const 0x40119d:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "64" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "1" -> "64" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "46" -> "64" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "66" -> "64" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "66" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "67" -> "66" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v68" [label="Post Call\nEAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v68" [color="#888888", style=dashed];
  "v68" -> "66" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "67" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "67" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "46" -> "67" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "2" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "69" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "43" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "70" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "70" [label="const 0x40118f:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "69" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "71" -> "69" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "46" -> "69" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "72" -> "69" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "72" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "71" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
